<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment">

    <EditText
        android:id="@+id/etRadiusC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/Radius"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btPerimeterC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAreaC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="319dp"
        android:text="@string/Area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btPerimeterC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/Perimeter"
        app:layout_constraintBaseline_toBaselineOf="@+id/btAreaC"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvResC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAreaC" />
</androidx.constraintlayout.widget.ConstraintLayout>